# Osteoporosis-Detector-Using-Explainable-AI

./: .gitignore  Ensemble_Stacking.ipynb  README.md  ensemble_stacking.py  pipeline.py  pyproject.toml  requirements.txt  train_test_reqs.txt  xray_pipeline.py
CNN/: command.txt  inference.py
CNN/data/: command.txt  dir.txt  inference.py  requirements.txt  train.py
Dataset/: Feature_Engineering.ipynb  final_cleaned_dataset.csv  final_dataset.csv  validation.ipynb
Ensemble_Stacking/: Ensemble_Stacking.ipynb  ensemble_stacking.py  final_dataset.csv  test_ensemble_stacking.py
Ensemble_Stacking/Dataset/: final_dataset.csv
README/: README.md
Testing/: integration_test.py  test_e2e.py  test_ensemble_stacking.py  unit_test-CNN.py  unit_test_unet.py
Testing/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Testing/catboost_info/learn/: events.out.tfevents
U-Net/: commands.txt  infer_crop.py  mask_crop_multiply.py  train_unet.py  unet.py  unit_test.py
UI/: app.py  ensemble_stacking.py  final_dataset.csv  gradcam_yolo.py  requirements.txt  run_reqs.txt  stacking_ensemble.joblib  test_e2e.py
XRay_Pipeline/: xray_pipeline.py
XRay_Pipeline/CNN/: command.txt  infer.py  inference.py  loss_func_reduce.docx
XRay_Pipeline/UNet/: commands.txt  infer_crop.py  unet.py
XRay_Pipeline/UNet/test/: _annotations.coco.json
images/: commands.txt  infer_crop.py  unet.py
images/test/: _annotations.coco.json
images/train/: _annotations.coco.json
images/valid/: _annotations.coco.json
images/validation/: _annotations.coco.json
