[project]
name = "osteoporosis-detector"
version = "0.1.0"
description = "Deep learning pipeline for classifying osteoporotic stage from hip X-rays using explainable AI"
requires-python = ">=3.10,<3.11"
dependencies = [
    "alembic==1.17.0",
    "altair==5.3.0",
    "anyio==4.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "catboost==1.2.3",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "entrypoints==0.4",
    "exceptiongroup==1.3.0",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fonttools==4.60.1",
    "fqdn==1.5.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "graphviz==0.21",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "ipykernel==7.0.1",
    "ipython==8.37.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.3.2",
    "json5==0.12.1",
    "pathlib==1.0.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.9",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kiwisolver==1.4.9",
    "lark==1.3.0",
    "lazy-loader==0.4",
    "learn==1.0.0",
    "lightgbm==4.2.0",
    "lime==0.2.0.1",
    "llvmlite==0.45.1",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.8.4",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.4",
    "narwhals==2.9.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numba==0.62.1",
    "numpy==1.26.4",
    "optuna==3.5.0",
    "opencv-python==4.9.0.80",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "pillow==10.4.0",
    "platformdirs==4.5.0",
    "plotly==5.19.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "protobuf==3.20.3",
    "psutil==7.1.1",
    "pure-eval==0.2.3",
    "pyarrow==15.0.2",
    "pycparser==2.23",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pympler==1.1",
    "pyparsing==3.2.5",
    "pytest==7.4.2",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "pytz==2024.1",
    "pywin32==311; platform_system == 'Windows'",
    "pywinpty==3.0.2; platform_system == 'Windows'",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==13.9.4",
    "rpds-py==0.27.1",
    "sci-kit==0.1.0",
    "scikit-image==0.23.2",
    "scikit-learn==1.3.2",
    "scipy==1.13.1",
    "seaborn>=0.12.0",
    "semver==3.0.4",
    "send2trash==1.8.3",
    "setuptools==69.5.1",
    "shap==0.44.1",
    "six==1.17.0",
    "slicer==0.0.7",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "stack-data==0.6.3",
    "streamlit==1.36.0",
    "tenacity==8.5.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tifffile==2025.5.10",
    "tinycss2==1.4.0",
    "toml==0.10.2",
    "tomli==2.3.0",
    "toolz==1.1.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "tornado==6.5.2",
    "tqdm==4.66.4",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2024.1",
    "tzlocal==5.3.1",
    "ultralytics==8.3.225",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "validators==0.35.0",
    "watchdog==4.0.2",
    "wcwidth==0.2.14",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "xgboost==2.0.3",
    "zipp==3.23.0",
]

[tool.uv]
package = false
